admin page add product completed

--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -12,6 +12,10 @@
   box-shadow: 1px 2px 3px 5px rgba(190, 189, 194, 0.836),
     0 3px 3px 0 rgb(49, 66, 141);
 }
+.Card__Logo>img{
+  height: 200px;
+  width: 100%;
+}
 .Card__Container:hover {
   transform: scale(1.1);
 }
