--- a/src/style/Subtotal.css
+++ b/src/style/Subtotal.css
@@ -6,7 +6,7 @@
     height: 100px;
     padding: 20px;
     margin-left: 50%;
-    background-color: #f3f3f3;
+    background-color: #f3f3f331;
     border: 1px solid #dddddd;
     border-radius: 3px;
   }
