added the search and email sending functions

--- a/src/style/FrontNav.css
+++ b/src/style/FrontNav.css
@@ -26,6 +26,10 @@
   align-items: center;
   padding: 20px;
 }
+.Search{
+  /* width: 50%; */
+}
+
 .header_Basket {
   padding: 20px;
   display: flex;
