--- a/src/style/FrontHeader.css
+++ b/src/style/FrontHeader.css
@@ -26,3 +26,15 @@
   cursor: pointer;
   margin-left: 45px;
 }
+.Search {
+  border: 1px solid rgb(255, 255, 255);
+  width: 50%;
+  border: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 25px;
+}
+.icon-material-u-i{
+  cursor: pointer;
+}
