--- a/src/style/AdminProducts.css
+++ b/src/style/AdminProducts.css
@@ -12,7 +12,7 @@
   box-shadow: 1px 2px 3px 5px rgba(190, 189, 194, 0.836),
     0 3px 3px 0 rgb(49, 66, 141);
 }
-.adminProduct{
+.adminProduct {
   transition: 5s;
 }
 .Card__Logo > img {
@@ -48,7 +48,8 @@
   margin-left: auto;
   margin-right: auto;
 }
-.Card__button > button {
+
+.admin__btn {
   margin: 10px;
   width: 80px;
   height: 25px;
@@ -58,11 +59,11 @@
   font-weight: 700;
   background-color: rgba(18, 18, 77, 0.726);
 }
-.Card__button > button:hover {
+.admin__btn:hover {
   color: antiquewhite;
   box-shadow: 1px 2px 3px 5px rgba(190, 189, 194, 0.836),
     0 3px 3px 0 rgb(49, 66, 141);
 }
-.adminProduct> :hover{
+.adminProduct > :hover {
   transform: scale(1.1);
 }
