--- a/src/style/AdminUpdate.css
+++ b/src/style/AdminUpdate.css
@@ -1,16 +1,22 @@
-.admin__Update{
-    width: auto;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;    
+.admin__Update {
+  width: auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.update__Left{
-    border: 1px solid black;
-    width: 50%;
+.update__Left {
+
+  width: 50%;
 }
-.AdminCard__Container{
-    border: 1px solid black;
-    margin-left: 20%;
-  
+.upadate__Right {
+
+  width: 50%;
+  display: flex;
+  justify-content: center;
+
+}
+.AdminCard__Container {
+  border: 1px solid black;
+  margin-left: 20%;
 }
