--- a/src/style/UpdateCardView.css
+++ b/src/style/UpdateCardView.css
@@ -1,8 +1,6 @@
 .Card__ContainerUpdate {
   border: 2px solid black;
-  padding: 25px;
   height: fit-content;
-  margin: 50px 5% 0px 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,10 +9,14 @@
   box-shadow: 1px 2px 3px 5px rgba(190, 189, 194, 0.836),
     0 3px 3px 0 rgb(49, 66, 141);
   width: 50%;
-  margin-top: 130px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  padding: 10px;
 }
 
-.cardImage{
+.cardImage {
   height: 200px;
   width: 100%;
 }
@@ -46,4 +48,18 @@
 .rating {
   font-size: medium;
   padding-bottom: 2px;
+}
+.input__Fields{
+  margin-left: 20%;
+  margin-right: 20%;
+
+}
+.updateBtn{
+  height: 30px;
+  border: none;
+  background-color: rgb(1, 1, 14);
+  color: aliceblue;
+  padding: 5px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
