--- a/src/style/Admin.css
+++ b/src/style/Admin.css
@@ -7,7 +7,7 @@
   margin-top: 100px;
   margin-left: 20%;
   margin-right: 20%;
-  height: 700px;
+  height: max-content;
   text-align: center;
   width: auto;
   box-shadow: 1px 2px 3px 5px rgba(190, 189, 194, 0.836),
