--- a/src/style/UpdateCardView.css
+++ b/src/style/UpdateCardView.css
@@ -49,12 +49,12 @@
   font-size: medium;
   padding-bottom: 2px;
 }
-.input__Fields{
-  margin-left: 20%;
-  margin-right: 20%;
-
+.input__Fields {
+  margin-left: auto;
+  margin-right: auto;
 }
-.updateBtn{
+
+.updateBtn {
   height: 30px;
   border: none;
   background-color: rgb(1, 1, 14);
